<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/paddingStartChooseTheme"
    android:paddingTop="@dimen/paddingTopChooseTheme"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выберите тему"
        android:textSize="@dimen/sizeTextChooseTheme"></TextView>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioBtnWinter"
            style="@style/radioBtnChooseTheme"
            android:text="@string/textThemesWinter"
            android:textSize="@dimen/sizeTextChooseTheme">
        </RadioButton>

        <RadioButton
            android:id="@+id/radioBtnSpring"
            style="@style/radioBtnChooseTheme"
            android:text="@string/textThemesSpring"
            android:textSize="@dimen/sizeTextChooseTheme">
        </RadioButton>

        <RadioButton
            android:id="@+id/radioBtnSummer"
            style="@style/radioBtnChooseTheme"
            android:text="@string/textThemesSummer"
            android:textSize="@dimen/sizeTextChooseTheme">
        </RadioButton>

        <RadioButton
            android:id="@+id/radioBtnAutumn"
            style="@style/radioBtnChooseTheme"
            android:text="@string/textThemesAutumn"
            android:textSize="@dimen/sizeTextChooseTheme">
        </RadioButton>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingBtnsChoose">

        <Button
            android:id="@+id/chooseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textSize="@dimen/sizeTextChooseTheme"></Button>

        <Button
            android:id="@+id/cancelChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/sizeTextChooseTheme"></Button>
    </LinearLayout>

</LinearLayout>